--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/style.css">
   <title>AI Poem Generator</title>
 </head>
 <body>
   <h1>
     Hey, Welcome to the AI Poem Generator
   </h1>
+  <script src="src/index.js"></script>
 </body>
 </html>
