--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <h1>
     Hey, Welcome to the AI Poem Generator
   </h1>
+
+  <footer> This AI project was coded by <a href="https://github.com/stephaniepanuschka" target="_blank">Stephanie Panuschka</a>
+    and is
+    <a href="https://github.com/stephaniepanuschka/AI-poem-generator" target="_blank">
+open-sourced on GitHub</a> and is hosted on <a href="https://ai-poem-generator-psi.vercel.app/" target="_blank">Vercel</a></footer>
   <script src="src/index.js"></script>
 </body>
 </html>
