Removed css and added html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
   <title>AI Poem Generator</title>
 </head>
 <body>
+  <header>
   <h1>
     Hey, Welcome to the AI Poem Generator
   </h1>
+</header>
+
+<main>
+  <form>
+    <input type="text" 
+    placeholder="Enter the topic of the poem" 
+    autofocus
+    required
+    autocomplete="off"
+    />
+  <input type="submit" />
+  </form>
+  <div>
+    This is where the poem will go
+    <b></b>
+  </div>
+</main>
+
+
 
   <footer> This AI project was coded by <a href="https://github.com/stephaniepanuschka" target="_blank">Stephanie Panuschka</a>
     <a href="https://github.com/stephaniepanuschka/AI-poem-generator" target="_blank">
