Added some css for user experience

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </form>
         <div class="hint">i.e: Love, Happiness or Food</div> 
           </div>
-           <div class="poem" id="poem"></div>
+           <div class="poem hidden" id="poem"></div>
            </main> 
 
            <footer> This AI project was coded by <a href="https://github.com/stephaniepanuschka" target="_blank">Stephanie Panuschka</a> 
